--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   },
   "devDependencies": {
     "@chainlink/contracts": "^0.4.0",
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.7.0",
+    "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
     "@types/mocha": "^9.1.0",
     "babel-eslint": "^10.1.0",
@@ -28,6 +28,7 @@
     "solhint": "^3.3.6",
     "solidity-coverage": "^0.7.13",
     "ts-node": ">=8.0.0",
+    "typechain": "^8.1.0",
     "typescript": ">=4.5.0"
   },
   "mocha": {
@@ -35,7 +36,7 @@
   },
   "dependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "ethereum-waffle": "^3.4.4",
-    "package.json": "^2.0.1"
+    "package.json": "^2.0.1",
+    "pkg.json": "^2.0.8"
   }
 }
