--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.2",
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "package.json": "^2.0.1"
+    "package.json": "^2.0.1",
+    "pkg.json": "^2.0.8"
   }
 }
